# SZE-MOSZE-2020-getTeamName

./: .gitignore  BadJsonException.h  BadJsonException_8h_source.html  Blood_Raven.json  Dark_Wanderer.json  Fallen.json  Hero.cpp  Hero.h  Hero_8h_source.html  JSON.cpp  JSON.h  JSON_8h_source.html  JsonParser.cpp  JsonParser.h  JsonParser_8h_source.html  Makefile  Maple.json  Monster.cpp  Monster.h  Monster_8h_source.html  README.md  Report.md  Zombie.json  annotated.html  autotoc_md0.html  classBadJsonException-members.html  classBadJsonException.html  classBadJsonException__coll__graph.map  classBadJsonException__coll__graph.md5  classBadJsonException__inherit__graph.md5  classCreature-members.html  classCreature.html  classGame-members.html  classGame.html  classGame_1_1AlreadyHasHeroException-members.html  classGame_1_1AlreadyHasHeroException.html  classGame_1_1AlreadyHasHeroException__coll__graph.md5  classGame_1_1AlreadyHasUnitsException-members.html  classGame_1_1AlreadyHasUnitsException.html  classGame_1_1AlreadyHasUnitsException__coll__graph.md5  (+97 more)
Units/: Bad1.json  Bad2.json  Kakarott.json  Maple.json  Sally.json  shuffled.json
google_test/: CMakeLists.txt  CreatureTests.cpp  JsonParser_test.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  functions_0.js  (+28 more)
(+8 files in other folders)
